# Arduino

./: notes.md  pyproject.toml  script.ipynb
active_buzzer/: active_buzzer.ino
arduino_programs/button_led/: button_led.ino
arduino_programs/photo_r/: photo_r.ino
arduino_programs/pwm_pr/: pwm_pr.ino
arduino_programs/sketch_oct8a/: sketch_oct8a.ino
arduino_programs/sketch_oct8b/: sketch_oct8b.ino
arduino_programs/temp_s/: temp_s.ino
arduino_rust/blink/: Cargo.toml
arduino_rust/test/: Cargo.toml
photo_r/: photo_r.ino
rgb_led/: rgb_led.ino
sketch_oct8a/: .sketch_oct8a.ino.kate-swp
sketch_oct8b/: sketch_oct8b.ino
traffic_l/: traffic_l.ino
