[tool.poetry]
name = "arduino-beginning"
version = "0.1.0"
description = ""
authors = ["YehorI <ivanov.e.s@my.mgimo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
